--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,7 +25,9 @@
     "rules": {
         "prettier/prettier": "error",
         "class-methods-use-this": "off",
-        // "@typescript-eslint/camelcase": "off",
+        "@typescript-eslint/no-unused-vars":["error", {
+            "argsIgnorePattern": "_"
+        }],
         "camelcase":"off",
         "import/extensions": [
             "error",
