--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "tsc",
     "dev:server": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules src/shared/infra/http/server.ts",
     "start": "ts-node src/shared/infra/http/index.ts",
-    "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js"
+    "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
+    "test": "jest"
   },
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^3.10.1",
@@ -31,13 +32,16 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.7",
     "@types/express": "^4.17.7",
+    "@types/jest": "^26.0.24",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/multer": "^1.4.4",
     "eslint": "6.8.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-import-resolver-typescript": "^2.2.1",
     "eslint-plugin-prettier": "^3.1.4",
+    "jest": "^27.0.6",
     "prettier": "^2.1.0",
+    "ts-jest": "^27.0.4",
     "ts-node-dev": "^1.0.0-pre.60",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^4.0.2"
