--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express-async-errors": "^3.1.1",
     "handlebars": "^4.7.7",
     "jsonwebtoken": "^8.5.1",
+    "mongodb": "^4.5.0",
     "multer": "^1.4.2",
     "nodemailer": "^6.6.3",
     "pg": "^8.3.3",
